--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "jquery": "^2.2.3",
     "react": "^0.14.7",
     "react-addons-css-transition-group": "^15.3.2",
+    "react-css-transition-replace": "^2.2.0",
     "react-dom": "^0.14.7",
     "react-google-maps": "^4.11.0",
-    "react-router": "^2.0.0"
+    "react-router": "^2.0.0",
+    "react-router-form": "^1.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.7.4",
