--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-plugin-transform-decorators": "^6.6.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "es6-promise": "^4.0.5",
+    "flux": "^3.1.2",
     "history": "^4.6.0",
     "jquery": "^2.2.3",
     "react": "^0.14.7",
